--- a/css/navigationStyle.css
+++ b/css/navigationStyle.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     padding: 0;
@@ -28,12 +27,12 @@ header {
     color: white;
 }
 
-
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: white;
+    background-color: #bfe1ec;
     padding: 10px;
+    height: 45px;
 }
 
 
@@ -101,6 +100,24 @@ nav {
 
 .dropdown-content a:hover {
     background-color: #ddd;
+}
+
+.add-items-button {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.add-items-button a {
+    display: inline-block;
+    padding: 10px 10px;
+    background-color: #4398b5;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.add-items-button a:hover {
+    background-color: #306a7e;
 }
 
 
