--- a/css/allUserStyle.css
+++ b/css/allUserStyle.css
@@ -1,30 +1,163 @@
-
 body {
     margin: 0;
     padding: 0;
 }
 
 
+.header-content {
+    text-align: center;
+}
+
+h1 {
+    margin: 0;
+}
+
+.logged-in {
+    margin-top: 5px;
+    color: #e3dede;
+}
+
+
+header {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    padding: 10px;
+    background-color: #4398b5;
+    color: white;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #bfe1ec;
+    padding: 10px;
+    height: 45px;
+}
+
+
+.dropdown {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.tbar {
+    background-size: contain;
+    transition: 0.2s;
+}
+
+.tbar img{
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+}
+
+
+
+.dropdown.profile {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.profileIcon {
+    background-size: contain;
+    transition: 0.2s;
+}
+
+.profileIcon img {
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%;
+    left: 0;
+}
+
+.dropdown-content a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #333;
+    white-space: nowrap;
+}
+
+.dropdown.profile .profile-content {
+    right: 0;
+    left: auto;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+.sell-icon {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.sell-icon img {
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+}
+
+.nav-item {
+    text-align: center;
+}
+
 h2 {
     color: #333;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
+.user-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin-top: 20px;
 }
 
-table, th, td {
+.user-card {
     border: 1px solid #ddd;
-}
-
-th, td {
+    border-radius: 5px;
     padding: 10px;
-    text-align: left;
+    margin: 10px;
+    text-align: center;
+    background-color: #f9f9f9;
 }
 
-form {
+.user-card form {
     display: inline;
-    margin: 0;
+    margin-top: 10px;
+}
+
+.user-card:hover {
+    background-color: #ddd;
+}
+
+
+
+.home-icon {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.home-icon img {
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
 }
