--- a/css/addItemStyle.css
+++ b/css/addItemStyle.css
@@ -184,3 +184,17 @@ s\:form input[type="submit"] {
     height: 30px;
     margin-left: 5px;
 }
+
+.error-box {
+    background-color: #ffe6e6; 
+    border: 1px solid #ff3333;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
+
+.action-box {
+    background-color: #e6ffe7; 
+    border: 1px solid #3aff33;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
