--- a/css/allBidsStyle.css
+++ b/css/allBidsStyle.css
@@ -169,3 +169,17 @@ h2 {
     font-size: 24px;
     color: #333;
 }
+
+.error-box {
+    background-color: #ffe6e6; 
+    border: 1px solid #ff3333;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
+
+.action-box {
+    background-color: #e6ffe7; 
+    border: 1px solid #3aff33;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
