--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -71,9 +71,22 @@ p {
 
 a {
     color: #2838cc;
-    text-decoration: none;
 }
 
 a:hover {
     text-decoration: underline;
+}
+
+.error-box {
+    background-color: #ffe6e6; 
+    border: 1px solid #ff3333;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
+
+.action-box {
+    background-color: #e6ffe7; 
+    border: 1px solid #3aff33;
+    padding: 10px; 
+    margin-bottom: 10px; 
 }
