--- a/css/navigationStyle.css
+++ b/css/navigationStyle.css
@@ -131,6 +131,20 @@ nav {
     margin-left: 5px;
 }
 
+.error-box {
+    background-color: #ffe6e6; 
+    border: 1px solid #ff3333;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
+
+.action-box {
+    background-color: #e6ffe7; 
+    border: 1px solid #3aff33;
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
+
 footer {
     text-align: center;
     padding: 10px;
