--- a/css/registrationStyle.css
+++ b/css/registrationStyle.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-    color: #333;
+    color: #555;
     margin-bottom: 20px;
 }
 
@@ -31,7 +31,7 @@ form {
 label {
     display: block;
     margin-bottom: 8px;
-    color: #555;
+    color: #555;    
 }
 
 input[type="text"],
@@ -62,4 +62,20 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #4398b5;
+}
+
+.error-box {
+    background-color: #ffe6e6; 
+    border: 1px solid #ff3333;
+    padding: 8px; 
+    margin-bottom: 10px; 
+    height: auto; 
+}
+
+.action-box {
+    background-color: #e6ffe7; 
+    border: 1px solid #3aff33;
+    padding: 8px; 
+    margin-bottom: 10px; 
+    height: auto; 
 }
