--- a/css/allItemsBidStyle.css
+++ b/css/allItemsBidStyle.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     padding: 0;
@@ -140,42 +141,6 @@ nav {
     position: relative;
 }
 
-.profileDetails{
-    max-width: 600px;
-    margin: 20px auto;
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-
-h2 {
-    color: #333;
-    text-align:center
-}
-p {
-    margin: 10px 0;
-}
-
-strong {
-    font-weight: bold;
-}
-
-s\:form {
-    margin-top: 20px;
-}
-
-
-s\:form input[type="submit"] {
-    background-color: #333;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .home-icon {
     cursor: pointer;
     display: flex;
@@ -187,6 +152,46 @@ s\:form input[type="submit"] {
     width: 30px;
     height: 30px;
     margin-left: 5px;
+}
+
+
+.bidDetails {
+    margin-top: 20px;
+}
+
+.bidCard {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.cardHeader {
+    background-color: #f0f0f0;
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
+}
+
+.cardHeader h3 {
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+}
+
+.cardBody {
+    padding: 10px;
+}
+
+.cardBody p {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #555;
+}
+
+h2 {
+    color: #333;
+    text-align:center
 }
 
 .error-box {
