--- a/css/addItemStyle.css
+++ b/css/addItemStyle.css
@@ -26,7 +26,6 @@ header {
     background-color: #4398b5;
     color: white;
 }
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -40,7 +39,7 @@ nav {
     cursor: pointer;
     display: flex;
     align-items: center;
-    position: absolute;
+    position: relative;
 }
 
 .tbar {
@@ -83,6 +82,7 @@ nav {
     z-index: 1;
     top: 100%;
     left: 0;
+    width:min-content;
 }
 
 .prof-dropdown-content {
@@ -112,10 +112,6 @@ nav {
     white-space: nowrap;
 }
 
-.dropdown.profile .profile-content {
-    right: 0px;
-    left: auto;
-}
 
 .dropdown-content a:hover {
     background-color: #ddd;
@@ -140,7 +136,10 @@ nav {
 
 .nav-item {
     text-align: center;
+    position: relative;
 }
+
+
 
 .home-icon {
     cursor: pointer;
@@ -196,18 +195,6 @@ s\:form input[type="submit"] {
     margin-top: 5px;
 }
 
-.home-icon {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-.home-icon img {
-    width: 30px;
-    height: 30px;
-    margin-left: 5px;
-}
 
 .error-box {
     background-color: #ffe6e6; 
