--- a/css/allBidStyle.css
+++ b/css/allBidStyle.css
@@ -140,42 +140,6 @@ nav {
     position: relative;
 }
 
-.profileDetails{
-    max-width: 600px;
-    margin: 20px auto;
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-
-h2 {
-    color: #333;
-    text-align:center
-}
-p {
-    margin: 10px 0;
-}
-
-strong {
-    font-weight: bold;
-}
-
-s\:form {
-    margin-top: 20px;
-}
-
-
-s\:form input[type="submit"] {
-    background-color: #333;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .home-icon {
     cursor: pointer;
     display: flex;
@@ -188,6 +152,54 @@ s\:form input[type="submit"] {
     height: 30px;
     margin-left: 5px;
 }
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    flex: 1 0 300px; 
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    margin: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: flex 0.3s; 
+}
+
+.card:hover {
+    flex-grow: 2; 
+}
+
+.card h2 {
+    margin-top: 0;
+    text-align: center;
+}
+
+.card form {
+    margin-top: 10px;
+}
+
+h2 {
+    color: #333;
+    text-align:center
+}
+
+.card form s\\:submit {
+    background-color: #4398b5;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.card form s\\:submit:hover {
+    background-color: #306a7e;
+}
+
 
 .error-box {
     background-color: #ffe6e6; 
