--- a/css/allBidsStyle.css
+++ b/css/allBidsStyle.css
@@ -40,7 +40,7 @@ nav {
     cursor: pointer;
     display: flex;
     align-items: center;
-    position: absolute;
+    position: relative;
 }
 
 .tbar {
@@ -83,6 +83,7 @@ nav {
     z-index: 1;
     top: 100%;
     left: 0;
+    width:min-content;
 }
 
 .prof-dropdown-content {
@@ -112,10 +113,6 @@ nav {
     white-space: nowrap;
 }
 
-.dropdown.profile .profile-content {
-    right: 0px;
-    left: auto;
-}
 
 .dropdown-content a:hover {
     background-color: #ddd;
@@ -124,6 +121,7 @@ nav {
 .prof-dropdown-content a:hover {
     background-color: #ddd;
 }
+
 .sell-icon {
     cursor: pointer;
     display: flex;
@@ -139,6 +137,7 @@ nav {
 
 .nav-item {
     text-align: center;
+    position: relative;
 }
 
 .home-icon {
