--- a/css/makeBidStyle.css
+++ b/css/makeBidStyle.css
@@ -45,7 +45,7 @@ nav {
     cursor: pointer;
     display: flex;
     align-items: center;
-    position: absolute;
+    position: relative;
 }
 
 .tbar {
@@ -88,6 +88,7 @@ nav {
     z-index: 1;
     top: 100%;
     left: 0;
+    width:min-content;
 }
 
 .prof-dropdown-content {
@@ -117,10 +118,6 @@ nav {
     white-space: nowrap;
 }
 
-.dropdown.profile .profile-content {
-    right: 0px;
-    left: auto;
-}
 
 .dropdown-content a:hover {
     background-color: #ddd;
@@ -145,6 +142,7 @@ nav {
 
 .nav-item {
     text-align: center;
+    position: relative;
 }
 
 .card {
